--- a/index.html
+++ b/index.html
@@ -209,6 +209,11 @@
                 <img width=250 height=423 class="text-center" src="assets/images/666.png">
                 <img width=250 height=423 class="text-center" src="assets/images/555.png">
             </div>
+            <br>
+            <p class="intro text-center"> Want to see more screenshots of this ROM? Click the link below</p>
+             <p class="intro  text-center"><a href="media.html" target="_blank">Link</a>
+                            </p>
+
         </div>
         <!--//container-->
     </section>
