--- a/media.html
+++ b/media.html
@@ -66,8 +66,10 @@
                 <!--//navbar-header-->
                 <div class="navbar-collapse collapse" id="navbar-collapse">
                     <ul class="nav navbar-nav">
-                        <li class="active nav-item sr-only"><a class="scrollto" href="index.html">Home</a></li>
-                        <li class="nav-item"><a href="index.html">Go Back</a></li>
+                        <li class="active nav-item sr-only"><a class="scrollto" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item"><a href="index.html">Go Back</a>
+                        </li>
                     </ul>
                     <!--//nav-->
                 </div>
@@ -79,9 +81,12 @@
     <!--//header-->
 
 
-      <!-- ******ABOUT****** -->
+    <!-- ******ABOUT****** -->
     <section id="about" class="about section">
         <div class="container">
+
+            <h2 class="title text-center">Screenshots</h2>
+            <p class="intro text-center">Open the image in a new tab to view it in full size.</p>
 
             <!--//row-->
             <div class="row text-center">
@@ -89,6 +94,26 @@
                 <img width=250 height=423 class="text-center" src="assets/images/777.png">
                 <img width=250 height=423 class="text-center" src="assets/images/666.png">
                 <img width=250 height=423 class="text-center" src="assets/images/555.png">
+
+                <img width=250 height=423 class="text-center" src="assets/images/Screenshots/16-06-15%20-%201.png">
+                <img width=250 height=423 class="text-center" src="assets/images/Screenshots/16-06-15%20-%202.png">
+                <img width=250 height=423 class="text-center" src="assets/images/Screenshots/16-06-15%20-%203.png">
+                <img width=250 height=423 class="text-center" src="assets/images/Screenshots/16-06-15%20-%204.png">
+                <img width=250 height=423 class="text-center" src="assets/images/Screenshots/16-06-15%20-%205.png">
+                <img width=250 height=423 class="text-center" src="assets/images/Screenshots/16-06-15%20-%206.png">
+                <img width=250 height=423 class="text-center" src="assets/images/Screenshots/16-06-15%20-%207.png">
+                <img width=250 height=423 class="text-center" src="assets/images/Screenshots/16-06-15%20-%208.png">
+                <img width=250 height=423 class="text-center" src="assets/images/Screenshots/16-06-15%20-%209.png">
+                <img width=250 height=423 class="text-center" src="assets/images/Screenshots/16-06-15%20-%2010.png">
+                <img width=250 height=423 class="text-center" src="assets/images/Screenshots/16-06-15%20-%2011.png">
+                <img width=250 height=423 class="text-center" src="assets/images/Screenshots/16-06-15%20-%2012.png">
+                <img width=250 height=423 class="text-center" src="assets/images/Screenshots/16-06-15%20-%2013.png">
+                <img width=250 height=423 class="text-center" src="assets/images/Screenshots/16-06-15%20-%2014.png">
+                <img width=250 height=423 class="text-center" src="assets/images/Screenshots/16-06-15%20-%2015.png">
+                <img width=250 height=423 class="text-center" src="assets/images/Screenshots/16-06-15%20-%2016.png">
+                <img width=250 height=423 class="text-center" src="assets/images/Screenshots/16-06-15%20-%2017.png">
+                <img width=250 height=423 class="text-center" src="assets/images/Screenshots/16-06-15%20-%2018.png">
+
             </div>
         </div>
         <!--//container-->
@@ -104,28 +129,33 @@
 
 
 
-      <section id="contact" class="contact section has-pattern">
+    <section id="contact" class="contact section has-pattern">
         <div class="container">
             <div class="contact-inner">
 
-        <div class="clearfix"></div>
-        <div class="info text-center">
-            <h4 class="sub-title">Get Connected</h4>
-            <ul class="social-icons list-inline">
-                <li class="last"><a href="http://bit.ly/1Fye9Gd" target="_blank"><i class="fa fa-google-plus"></i></a></li>
-                <li class="last"><a href="http://bit.ly/1O2KtWg" target="_blank"><i class="fa fa-github"></i></a></li>
-                <li><a href="http://bit.ly/1yTJNBo" target="_blank"><i class="fa fa-twitter"></i></a></li>
-                <li><a href="http://on.fb.me/1OfqtFp" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                <li class="last"><a href="mailto: askowndroid@gmail.com"><i class="fa fa-envelope"></i></a></li>
-            </ul>
-        </div>
-        <!--//info-->
-        </div>
-        <!--//contact-inner-->
+                <div class="clearfix"></div>
+                <div class="info text-center">
+                    <h4 class="sub-title">Get Connected</h4>
+                    <ul class="social-icons list-inline">
+                        <li class="last"><a href="http://bit.ly/1Fye9Gd" target="_blank"><i class="fa fa-google-plus"></i></a>
+                        </li>
+                        <li class="last"><a href="http://bit.ly/1O2KtWg" target="_blank"><i class="fa fa-github"></i></a>
+                        </li>
+                        <li><a href="http://bit.ly/1yTJNBo" target="_blank"><i class="fa fa-twitter"></i></a>
+                        </li>
+                        <li><a href="http://on.fb.me/1OfqtFp" target="_blank"><i class="fa fa-facebook"></i></a>
+                        </li>
+                        <li class="last"><a href="mailto: askowndroid@gmail.com"><i class="fa fa-envelope"></i></a>
+                        </li>
+                    </ul>
+                </div>
+                <!--//info-->
+            </div>
+            <!--//contact-inner-->
         </div>
         <!--//container-->
     </section>
-  <footer class="footer">
+    <footer class="footer">
         <div class="container text-center">
             <small class="copyright">Designed by <a href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> built by <a href="http://bit.ly/1Fye9Gd" target="_blank">The OwnDroid Team</a></small>
         </div>
@@ -142,16 +172,22 @@
     <script type="text/javascript" src="assets/plugins/jquery-scrollTo/jquery.scrollTo.min.js"></script>
     <script type="text/javascript" src="assets/plugins/prism/prism.js"></script>
     <script type="text/javascript" src="assets/js/main.js"></script>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    <script>
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-  ga('create', 'UA-64189925-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
+        ga('create', 'UA-64189925-1', 'auto');
+        ga('send', 'pageview');
+    </script>
 </body>
 
 </html>
