Update links and changelog

--- a/changelog.html
+++ b/changelog.html
@@ -80,6 +80,7 @@
     <!--//header-->
 
 <script src="http://gist-it.appspot.com/github/OwnROM/android/blob/cm-12.1/Changelog.txt?footer=0"></script>
+    <p>Not working? You may also view the changelog here:<a href="changelog.txt" target="_blank">Link</a></p>
 
         <!--//container-->
     </section>
