--- a/index.html
+++ b/index.html
@@ -324,9 +324,10 @@
                                 <tr>
                                     <th>Moto G</th>
                                     <th>Falcon</th>
-                                    <td><a href="https://www.androidfilehost.com/?w=files&flid=32380" target="_blank">Link</a>
+                                    <td><a href="https://www.androidfilehost.com/?w=files&flid=33891" target="_blank">Link</a>
                                     </td>
-                                    <td>N/A</td>
+
+                                    <td><a href="   https://www.androidfilehost.com/?w=files&flid=33892" target="_blank">Link</a></td>
                                     <td><a href="http://forum.xda-developers.com/moto-g/development/rom-5-1-1r3-thread-ownrom-moto-g-t3135897" target="_blank">Link</a>
                                     </td>
                                 </tr>
