Update Team Page

--- a/index.html
+++ b/index.html
@@ -738,9 +738,9 @@
                         <div class="speech-bubble">
                             <h3 class="sub-title">Jaskirat Panjrath</h3>
                             <div class="source">
-                                <span class="title">Designer</span>
+                                <span class="title">Themer</span>
                                 <br>
-                                <span class="title">Maintains: Boot Animation </span>
+                                <span class="title">Maintains: Graphics </span>
                                 <br />
                                 <span class="name"><a href="https://plus.google.com/+JaskiratPanjrath" target="_blank">Link</a></span>
                             </div>
