Fix download page for mobile

--- a/index.html
+++ b/index.html
@@ -432,6 +432,7 @@
 
                             </tbody>
                         </table>
+                    </div>
 
                         <h3 class="sub-title text-center">Lollipop G-Apps [5.1.1]</h3>
                         <div class="table-responsive">
@@ -459,6 +460,7 @@
                                     </tr>
                                 </tbody>
                             </table>
+            </div>
 
                             <h3 class="sub-title text-center">Lollipop Kernel [5.1.x]</h3>
                             <div class="table-responsive">
@@ -483,7 +485,7 @@
                                     </tbody>
                                 </table>
 
-
+            </div>
 
 
                             </div>
