Update download and team pages

--- a/index.html
+++ b/index.html
@@ -341,6 +341,18 @@
                                     <td><a href="http://bit.ly/ownhammer" target="_blank">Link</a>
                                     </td>
                                 </tr>
+
+                                  <tr>
+                                    <th>LG Optimus L9</th>
+                                    <th>P760</th>
+                                    <td><a href="http://forum.xda-developers.com/devdb/project/?id=7340#downloads" target="_blank">Link</a>
+                                    </td>
+                                    <td>N/A
+                                    </td>
+                                    <td><a href="http://forum.xda-developers.com/optimus-l9/development/rom-ownromv2-0beta-t2983382" target="_blank">Link</a>
+                                    </td>
+                                </tr>
+
                                 <tr>
                                     <th>Android One</th>
                                     <th>Sprout4</th>
@@ -371,6 +383,19 @@
                                     </td>
 
                                 </tr>
+
+                                 <tr>
+                                    <th>Sony Xperia L</th>
+                                    <th>Taoshan</th>
+                                    <td><a href="https://www.androidfilehost.com/?fid=24052804347762598" target="_blank">Link</a>
+                                    </td>
+                                    <td>N/A
+                                    </td>
+                                    <td><a href="http://forum.xda-developers.com/xperia-l/development/rom-ownrom-0-5-beta-t3139726" target="_blank">Link</a>
+                                    </td>
+
+                                </tr>
+
                                 <tr>
                                     <th>OnePlus One</th>
                                     <th>Bacon</th>
@@ -409,6 +434,17 @@
                                     <td><a href="http://bit.ly/jfltetmo" target="_blank">Link</a>
                                     </td>
                                 </tr>
+
+                                 <tr>
+                                    <th>Samsung Galaxy S4</th>
+                                    <th>Jfltexx</th>
+                                    <td><a href="https://www.androidfilehost.com/?w=files&flid=34056" target="_blank">Link</a>
+                                    </td>
+                                    <td>N/A</td>
+                                    <td><a href="http://forum.xda-developers.com/galaxy-s4/i9505-develop/rom-ownrom-galaxy-s4-jfltexx-06-20-2015-t3139868" target="_blank">Link</a>
+                                    </td>
+                                </tr>
+
                                 <tr>
                                     <th>Samsung Galaxy S5</th>
                                     <th>Klte</th>
@@ -701,7 +737,7 @@
                             <div class="source">
                                 <span class="title">Maintainer</span>
                                 <br>
-                                <span class="title">Maintains: Galaxy S4 [Jfltetmo] </span>
+                                <span class="title">Maintains: Galaxy S4 [Jfltetmo + Jfltexx] </span>
                                 <br />
                                 <span class="name"><a href="https://plus.google.com/107002554168576794353" target="_blank">Link</a></span>
                             </div>
@@ -725,6 +761,46 @@
                                 <span class="title">Maintains: Sony Xperia SP [Huashan] </span>
                                 <br />
                                 <span class="name"><a href="https://plus.google.com/104355072611967579746" target="_blank">Link</a></span>
+                            </div>
+                            <!--//source-->
+                        </div>
+                        <!--//speech-bubble-->
+                    </div>
+                    <!--//author-message-->
+
+                     <div class="author-message">
+                        <div class="profile">
+                            <img class="img-responsive" src="assets/images/profile9.png" alt="" />
+                        </div>
+                        <!--//profile-->
+                        <div class="speech-bubble">
+                            <h3 class="sub-title">Anik Khan</h3>
+                            <div class="source">
+                                <span class="title">Maintainer</span>
+                                <br>
+                                <span class="title">Maintains: Sony Xperia L [Taoshan] </span>
+                                <br />
+                                <span class="name"><a href="https://plus.google.com/117472433640670383721" target="_blank">Link</a></span>
+                            </div>
+                            <!--//source-->
+                        </div>
+                        <!--//speech-bubble-->
+                    </div>
+                    <!--//author-message-->
+
+                      <div class="author-message">
+                        <div class="profile">
+                            <img class="img-responsive" src="assets/images/profile10.png" alt="" />
+                        </div>
+                        <!--//profile-->
+                        <div class="speech-bubble">
+                            <h3 class="sub-title">Ebert Schoofs</h3>
+                            <div class="source">
+                                <span class="title">Maintainer</span>
+                                <br>
+                                <span class="title">Maintains: LG Optimus L9 [P760] </span>
+                                <br />
+                                <span class="name"><a href="https://plus.google.com/+ebertschoofs" target="_blank">Link</a></span>
                             </div>
                             <!--//source-->
                         </div>
