Update Team Page
Signed-off-by: ROM-Jeremy <Disciple97414@Gmail.com>

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                                     <td><a href="https://www.androidfilehost.com/?w=files&flid=33891" target="_blank">Link</a>
                                     </td>
 
-                                    <td><a href="   https://www.androidfilehost.com/?w=files&flid=33892" target="_blank">Link</a></td>
+                                    <td><a href="https://www.androidfilehost.com/?w=files&flid=33892" target="_blank">Link</a></td>
                                     <td><a href="http://forum.xda-developers.com/moto-g/development/rom-5-1-1r3-thread-ownrom-moto-g-t3135897" target="_blank">Link</a>
                                     </td>
                                 </tr>
@@ -341,8 +341,7 @@
                                     <td><a href="http://bit.ly/ownhammer" target="_blank">Link</a>
                                     </td>
                                 </tr>
-
-                                  <tr>
+                                <tr>
                                     <th>LG Optimus L9</th>
                                     <th>P760</th>
                                     <td><a href="http://forum.xda-developers.com/devdb/project/?id=7340#downloads" target="_blank">Link</a>
@@ -352,7 +351,6 @@
                                     <td><a href="http://forum.xda-developers.com/optimus-l9/development/rom-ownromv2-0beta-t2983382" target="_blank">Link</a>
                                     </td>
                                 </tr>
-
                                 <tr>
                                     <th>Android One</th>
                                     <th>Sprout4</th>
@@ -371,7 +369,6 @@
                                     <td><a href="http://bit.ly/sprout8" target="_blank">Link</a>
                                     </td>
                                 </tr>
-
                                 <tr>
                                     <th>Sony Xperia SP</th>
                                     <th>Huashan</th>
@@ -381,10 +378,8 @@
                                     </td>
                                     <td><a href="http://bit.ly/ownhuashan" target="_blank">Link</a>
                                     </td>
-
                                 </tr>
-
-                                 <tr>
+                                <tr>
                                     <th>Sony Xperia L</th>
                                     <th>Taoshan</th>
                                     <td><a href="https://www.androidfilehost.com/?fid=24052804347762598" target="_blank">Link</a>
@@ -393,9 +388,7 @@
                                     </td>
                                     <td><a href="http://forum.xda-developers.com/xperia-l/development/rom-ownrom-0-5-beta-t3139726" target="_blank">Link</a>
                                     </td>
-
                                 </tr>
-
                                 <tr>
                                     <th>OnePlus One</th>
                                     <th>Bacon</th>
@@ -423,7 +416,6 @@
                                     <td>N/A</td>
                                     <td><a href="http://bit.ly/owni9300" target="_blank">Link</a>
                                     </td>
-
                                 </tr>
                                 <tr>
                                     <th>Samsung Galaxy S4</th>
@@ -434,8 +426,7 @@
                                     <td><a href="http://bit.ly/jfltetmo" target="_blank">Link</a>
                                     </td>
                                 </tr>
-
-                                 <tr>
+                                <tr>
                                     <th>Samsung Galaxy S4</th>
                                     <th>Jfltexx</th>
                                     <td><a href="https://www.androidfilehost.com/?w=files&flid=34056" target="_blank">Link</a>
@@ -444,7 +435,6 @@
                                     <td><a href="http://forum.xda-developers.com/galaxy-s4/i9505-develop/rom-ownrom-galaxy-s4-jfltexx-06-20-2015-t3139868" target="_blank">Link</a>
                                     </td>
                                 </tr>
-
                                 <tr>
                                     <th>Samsung Galaxy S5</th>
                                     <th>Klte</th>
@@ -453,6 +443,16 @@
                                     <td><a href="https://www.androidfilehost.com/?w=files&flid=33338" target="_blank">Link</a>
                                     </td>
                                     <td><a href="http://bit.ly/ownklte" target="_blank">Link</a>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th>LG Optimus L90</th>
+                                    <th>w7</th>
+                                    <td><a href="https://www.androidfilehost.com/?w=files&flid=34139" target="_blank">Link</a>
+                                    </td>
+                                    <td><a href="https://www.androidfilehost.com/?w=files&flid=34127" target="_blank">Link</a>
+                                    </td>
+                                    <td><a href="http://forum.xda-developers.com/lg-l90/development/rom-ownrom-optimus-l90-t3140303" target="_blank">Link</a>
                                     </td>
                                 </tr>
                                 <tr>
@@ -690,6 +690,26 @@
                     <div class="author-message">
                         <div class="profile">
                             <img class="img-responsive" src="assets/images/profile5.png" alt="" />
+                        </div>
+                        <!--//profile-->
+                        <div class="speech-bubble">
+                            <h3 class="sub-title">Anthony Asher</h3>
+                            <div class="source">
+                                <span class="title">Devolper</span>
+                                <br>
+                                <span class="title">Maintains: ROM, Kernel, LG Optimus L90 [w7] </span>
+                                <br />
+                                <span class="name"><a href="https://plus.google.com/+AnthonyAsher" target="_blank">Link</a></span>
+                            </div>
+                            <!--//source-->
+                        </div>
+                        <!--//speech-bubble-->
+                    </div>
+                    <!--//author-message-->
+
+                    <div class="author-message">
+                        <div class="profile">
+                            <img class="img-responsive" src="assets/images/profile11.png" alt="" />
                         </div>
                         <!--//profile-->
                         <div class="speech-bubble">
