Update team and some fixs

--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
             <p class="intro">A custom Android ROM made by the OwnDroid team.</p>
             <div class="btns">
                 <a class="btn btn-cta-secondary" href="#about">Read More</a>
-                <a class="btn btn-cta-primary" href="#docs">Download</a>
+                <a class="btn btn-cta-primary" href="#download
+                                                    ">Download</a>
             </div>
             <ul class="meta list-inline">
 
@@ -827,6 +828,28 @@
                         <!--//speech-bubble-->
                     </div>
                     <!--//author-message-->
+
+
+                       <div class="author-message">
+                        <div class="profile">
+                            <img class="img-responsive" src="assets/images/profile12.png" alt="" />
+                        </div>
+                        <!--//profile-->
+                        <div class="speech-bubble">
+                            <h3 class="sub-title">Pranav Reddy</h3>
+                            <div class="source">
+                                <span class="title">Maintainer</span>
+                                <br>
+                                <span class="title">Maintains: Yu Yureka [Tomato]  </span>
+                                <br />
+                                <span class="name"><a href="https://plus.google.com/u/0/117650956457547525502" target="_blank">Link</a></span>
+                            </div>
+                            <!--//source-->
+                        </div>
+                        <!--//speech-bubble-->
+                    </div>
+                    <!--//author-message-->
+
 
                     <div class="author-message">
                         <div class="profile">
