--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
                                     <th>Tomato</th>
                                     <td><a href="https://basketbuild.com/devs/pranav01/OwnRom/OFFICIAL" target="_blank">Link</a>
                                     </td>
-                                    <td><a href="https://basketbuild.com/devs/pranav01/OwnRom/OFFICIAL/Nightlies/Tomato" target="_blank">Link</a>
+                                    <td><a href="https://www.androidfilehost.com/?w=files&flid=34080" target="_blank">Link</a>
                                     </td>
                                     <td><a href="http://bit.ly/owntomato" target="_blank">Link</a>
                                     </td>
