Updated media page

--- a/media.html
+++ b/media.html
@@ -114,6 +114,20 @@
                 <img width=250 height=423 class="text-center" src="assets/images/Screenshots/16-06-15%20-%2017.png">
                 <img width=250 height=423 class="text-center" src="assets/images/Screenshots/16-06-15%20-%2018.png">
 
+
+           <h2 class="title text-center">Videos</h2>
+
+           <iframe width="560" height="315" src="https://www.youtube.com/embed/ypXLgQsABSc" frameborder="0" allowfullscreen></iframe>
+
+           <iframe width="560" height="315" src="https://www.youtube.com/embed/xrLbpg100Ug" frameborder="0" allowfullscreen></iframe>
+
+            <br>
+                </br>
+            <h2 class="title text-center">Reviews</h2>
+
+                <p><a href="http://www.androidscout.com/android-rom-list/ownrom/week-3-5-tiago-marques-review/" target="_blank">Android Scout Review</a></p>
+
+
             </div>
         </div>
         <!--//container-->
