Add nexus 7 download

--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                                     </td>
                                 </tr>
                                 <tr>
-                                    <th>Moto X</th>
+                                    <th>Moto X [2013]</th>
                                     <th>Ghost</th>
                                     <td><a href="http://bit.ly/1Qjar9k" target="_blank">Link</a>
                                     </td>
@@ -323,7 +323,7 @@
                                     </td>
                                 </tr>
                                 <tr>
-                                    <th>Moto G</th>
+                                    <th>Moto G [2013]</th>
                                     <th>Falcon</th>
                                     <td><a href="https://www.androidfilehost.com/?w=files&flid=33891" target="_blank">Link</a>
                                     </td>
@@ -353,7 +353,7 @@
                                     </td>
                                 </tr>
                                 <tr>
-                                    <th>Android One</th>
+                                    <th>Android One [1st Gen]</th>
                                     <th>Sprout4</th>
                                     <td><a href="http://bit.ly/1b1HVL4" target="_blank">Link</a>
                                     </td>
@@ -362,7 +362,7 @@
                                     </td>
                                 </tr>
                                 <tr>
-                                    <th>Android One</th>
+                                    <th>Android One [2nd Gen]</th>
                                     <th>Sprout8</th>
                                     <td><a href="http://bit.ly/1b1HVL4" target="_blank">Link</a>
                                     </td>
@@ -456,6 +456,18 @@
                                     <td><a href="http://forum.xda-developers.com/lg-l90/development/rom-ownrom-optimus-l90-t3140303" target="_blank">Link</a>
                                     </td>
                                 </tr>
+
+ <tr>
+                                    <th>Nexus 7 [2013]</th>
+                                    <th>Flo</th>
+                                    <td><a href="https://www.androidfilehost.com/?w=files&flid=34486" target="_blank">Link</a>
+                                    </td>
+                                    <td><a href="https://www.androidfilehost.com/?w=files&flid=34487" target="_blank">Link</a>
+                                    </td>
+                                    <td><a href="http://forum.xda-developers.com/nexus-7-2013/development/rom-ownrom-t3145779" target="_blank">Link</a>
+                                    </td>
+                                </tr>
+
                                 <tr>
                                     <th>Yu Yureka</th>
                                     <th>Tomato</th>
@@ -849,6 +861,28 @@
                         <!--//speech-bubble-->
                     </div>
                     <!--//author-message-->
+
+
+                     <div class="author-message">
+                        <div class="profile">
+                            <img class="img-responsive" src="assets/images/profile13.png" alt="" />
+                        </div>
+                        <!--//profile-->
+                        <div class="speech-bubble">
+                            <h3 class="sub-title">Daniel Medeiros</h3>
+                            <div class="source">
+                                <span class="title">Maintainer</span>
+                                <br>
+                                <span class="title">Maintains: Nexus 7 2013 [Flo]  </span>
+                                <br />
+                                <span class="name"><a href="https://plus.google.com/u/0/+DanielMedeirosuselinux" target="_blank">Link</a></span>
+                            </div>
+                            <!--//source-->
+                        </div>
+                        <!--//speech-bubble-->
+                    </div>
+                    <!--//author-message-->
+
 
 
                     <div class="author-message">
