Fix some spelling errors

--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
         <div class="container">
             <div class="contact-inner">
                 <h2 class="title  text-center">Contribute</h2>
-                <p class="intro  text-center">Join us. We are still searching for new beginning developers and maintainers... Wanna set foot in the world behind Android ROM's? Wanna be a developer, maintainer for your beloved device, our website or Gapps, designer for our website, apps or ROM? Then this is your chance, we are accepting absolute newbies, we will help you get everything ready and set up to build Android for your device... Why? Because we think we must share android, android is open source, so the way to develop android must be to... Join our fast growing community and help us make this a reality with a huge team of nice devolpers.</p>
+                <p class="intro  text-center">Join us. We are still searching for new beginning developers and maintainers... Wanna set foot in the world behind Android ROM's? Wanna be a developer, maintainer for your beloved device, our website or Gapps, designer for our website, apps or ROM? Then this is your chance, we are accepting absolute newbies, we will help you get everything ready and set up to build Android for your device... Why? Because we think we must share android, android is open source, so the way to develop android must be to... Join our fast growing community and help us make this a reality with a huge team of nice developers.</p>
                 <p class="intro  text-center"> Want to become part of our team? Just fill out the form below.</p>
                 <p class="intro  text-center"><a href="http://bit.ly/1CGP0HE" target="_blank">Link</a>
                 </p>
@@ -648,7 +648,7 @@
                         <div class="speech-bubble">
                             <h3 class="sub-title">Mark V</h3>
                             <div class="source">
-                                <span class="title">Main Devolper</span>
+                                <span class="title">Main Developer</span>
                                 <br>
                                 <span class="title">Maintains: ROM, Nexus 6 [Shamu], Nexus 5 [Hammerhead], Samsung Galaxy S5 [Klte] </span>
                                 <br />
@@ -668,7 +668,7 @@
                         <div class="speech-bubble">
                             <h3 class="sub-title">Victor Linfield</h3>
                             <div class="source">
-                                <span class="title">Web Devolper</span>
+                                <span class="title">Web Developer</span>
                                 <br>
                                 <span class="title">Maintains: Website, Gapps, Moto G 2013 [Falcon] </span>
                                 <br />
@@ -688,7 +688,7 @@
                         <div class="speech-bubble">
                             <h3 class="sub-title">Akhil Narang</h3>
                             <div class="source">
-                                <span class="title">Devolper</span>
+                                <span class="title">Developer</span>
                                 <br>
                                 <span class="title">Maintains: Android One [Sprout4 and Sprout8], One Plus One [Bacon] </span>
                                 <br />
@@ -708,7 +708,7 @@
                         <div class="speech-bubble">
                             <h3 class="sub-title">Anthony Asher</h3>
                             <div class="source">
-                                <span class="title">Devolper</span>
+                                <span class="title">Developer</span>
                                 <br>
                                 <span class="title">Maintains: ROM, Kernel, LG Optimus L90 [w7] </span>
                                 <br />
