--- a/index.html
+++ b/index.html
@@ -532,6 +532,16 @@
                                             </td>
                                         </tr>
                                     </tbody>
+                                    <tbody>
+                                        <tr>
+                                            <th scope="row">OnePlus One</th>
+                                            <td>Bacon</td>
+                                            <td><a href="http://sourceforge.net/projects/ownrom/files/bacon/OwnKernel" target="_blank">Download</a>
+                                            </td>
+                                            <td><a href="http://bit.ly/okbacon" target="_blank">Link</a>
+                                            </td>
+                                        </tr>
+                                    </tbody>
                                 </table>
 
             </div>
