--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                                 <tr>
                                     <th>Android One [1st Gen]</th>
                                     <th>Sprout4</th>
-                                    <td><a href="http://bit.ly/1b1HVL4" target="_blank">Link</a>
+                                    <td><a href="http://sourceforge.net/projects/ownrom/files/sprout4/" target="_blank">Link</a>
                                     </td>
                                     <td>N/A</td>
                                     <td><a href="http://bit.ly/sprout4" target="_blank">Link</a>
@@ -364,7 +364,7 @@
                                 <tr>
                                     <th>Android One [2nd Gen]</th>
                                     <th>Sprout8</th>
-                                    <td><a href="http://bit.ly/1b1HVL4" target="_blank">Link</a>
+                                    <td><a href="http://sourceforge.net/projects/ownrom/files/sprout8/" target="_blank">Link</a>
                                     </td>
                                     <td>N/A</td>
                                     <td><a href="http://bit.ly/sprout8" target="_blank">Link</a>
